Fix shitty hamburger jump

--- a/src/app/main/components/sidebar/sidebar.component.css
+++ b/src/app/main/components/sidebar/sidebar.component.css
@@ -5,7 +5,7 @@
   left:-20vw;
   width: 20vw;
   height: 100vh;
-  background-color: #3F51B5;
+  background-color: #7986EB;
   transition: left 0.3s;
   color: white;
 }
@@ -25,7 +25,6 @@
   align-items:center;
   justify-content: center;
   border-bottom: 1px white solid;
-  border-right: 1px white solid;
   cursor: pointer;
 }
 
@@ -47,7 +46,7 @@
 }
 
 :host .sidebar-title:first-of-type:hover {
-  background-color: #3F51B5;
+  background-color: rgba(255, 255, 255, 0.2);
 }
 
 :host .sidebar-title:hover {
